refactor: dto 변환 메소드를 domain -> dto(record)로 변경