@@ -14,7 +14,6 @@ import org.springframework.stereotype.Repository;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Repository
 @RequiredArgsConstructor
@@ -23,9 +22,15 @@ public class ProfileRepositorySupport {
 
     private final QProfile profile = QProfile.profile;
 
+    /**
+     * 랜덤으로 프로필 조회
+     * querydsl은 random 함수를 지원하지 않음. 따라서 native query를 사용해야 함
+     * MySQL은 NumberExpression을 지원 X. 따라서 Expressions.numberTemplate을 사용
+     * @param pageable 페이지 정보
+     * @param myProfileId 내 프로필 id
+     * @return 프로필 리스트
+     */
     public Slice<ProfileResponse> findByRandom(Pageable pageable, Long myProfileId) {
-        // querydsl은 random 함수를 지원하지 않음. 따라서 native query를 사용해야 함
-        // MySQL은 NumberExpression을 지원 X. 따라서 Expressions.numberTemplate을 사용
         List<Profile> profileList = jpaQueryFactory
                 .selectFrom(profile)
                 .where(profile.id.ne(myProfileId))
@@ -39,23 +44,21 @@ public class ProfileRepositorySupport {
 
     @NotNull
     private static SliceImpl<ProfileResponse> ToSliceProfileImpl(Pageable pageable, List<Profile> profileList) {
-        boolean hasNext = false;        // 다음 페이지 존재 여부
+        boolean hasNext = false;
 
-        // 조회된 데이터가 요청한 페이지 사이즈보다 큰 경우
         if (profileList.size() > pageable.getPageSize()) {
             profileList.remove(profileList.size() - 1);
             hasNext = true;
         }
 
-        if (profileList.size() == 0) {  // 조회된 데이터가 없는 경우
-            return new SliceImpl<>(new ArrayList<>(), pageable, hasNext);  // 빈 리스트 반환
+        if (profileList.size() == 0) {
+            return new SliceImpl<>(new ArrayList<>(), pageable, hasNext);
         }
 
-        // profileList를 profileResponseList로 변환
         List<ProfileResponse> profileResponses = profileList.stream()
-                .map(Profile::toResponse)
-                .collect(Collectors.toList());
+                .map(ProfileResponse::of)
+                .toList();
 
-        return new SliceImpl<>(profileResponses, pageable, hasNext);    // SliceImpl 객체 반환
+        return new SliceImpl<>(profileResponses, pageable, hasNext);
     }
 }
